Fix switch alignment

--- a/css/material.css
+++ b/css/material.css
@@ -334,6 +334,7 @@ blockquote + cite {
 	background-color: #b0afaf;
 	display: inline-block;
 	position: relative;
+	top: 0.15em;
 	vertical-align: top;
 }
 .switch input:checked + label::before {
@@ -350,7 +351,6 @@ blockquote + cite {
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 	box-sizing: border-box;
 	left: -0.15em;
-	top: -0.15em;
 	background-color: #f1f1f1;
 	transition: box-shadow 0.2s ease, transform 0.08s linear;
 	vertical-align: top;
